# whelk-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: lib.rs  main.rs
src/data/inference-tests/go-extract/: go-extract-asserted.owx  go-extract-entailed.owx
src/data/inference-tests/skeletons/: skeletons-asserted.owx  skeletons-entailed.owx  skeletons-invalid.owx
src/whelk/: model.rs  owl.rs  reasoner.rs
