[package]
name = "whelk"
version = "0.1.0"
authors = ["Jim Balhoff <balhoff@renci.org>"]
edition = "2021"

[dependencies]
curie = "^0.1"
clap = { version = "^4.1", features = ["derive"] }
env_logger = "^0.10"
#horned-functional = "^0.4"
#horned-bin = "^0.14"
horned-owl = "^0.14"
humantime = "^2.0"
im = "^15.1"
itertools = "^0.10"
lazy_static = "^1.3"
log = { version = "^0.4", features = ["std"] }
proc-macro2 = "^1.0"
rayon = "^1.6"
regex = "^1.7"
serde = "^1.0"
serde_derive = "^1.0"
