[package]
name = "whelk"
version = "0.1.0"
authors = ["Jim Balhoff <balhoff@renci.org>"]
edition = "2021"

[dependencies]
clap = { version = "^4.1", features = ["derive"] }
env_logger = "^0.10"
horned-owl = "^0.14"
humantime = "^2.0"
im = "^15.1"
itertools = "^0.10"
log = { version = "^0.4", features = ["std"] }
